# Catune

./: .eslintrc.js  .gitignore  AGENTS.md  AI姿态矫正康复产品PRD.md  App.tsx  CLAUDE.md  PRODUCT.md  README.md  app.json  babel.config.js  components.json  global.css  index.js  jest.config.js  jest.css-stub.js  jest.setup.js  metro.config.js  package-lock.json  package.json  skills-lock.json  tailwind.config.js  tsconfig.json  version.native.json  version.properties
.agents/skills/catune-product-design/: AGENTS.md  SKILL.md
.catui/token-save/: history.jsonl
PRD/: AI姿态矫正康复产品PRD.md  技术规格文档.md
Plans/: 决赛前开发排期-2026Q3-w1.md
__tests__/: AGENTS.md  App.test.tsx  App.zh.test.tsx
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  eyes_llm_session.cpp  eyes_llm_session.h  eyes_log.h  eyes_mnn_bridge.cpp  llm_stream_buffer.hpp  utf8_stream_processor.hpp
android/app/src/main/jni/: CMakeLists.txt
docs/: AI姿态矫正康复产品PRD.md  BLE协议与固件.md  Expo原生统一与MNN接入.md  README-Native.md  README-Native.md.en  SME2端侧大模型实战演练计划.md  iOS真机构建与环境.md  iOS适配评估与计划.md  【指南】在_MNN_框架中开启_SME2_加速_CPU_推理_v1-1 1.txt  参赛创意方案.md  参赛视频录制脚本.md  技术实现文档.md  技术草案.md  模型与记忆个性化设计.md  硬件单板自检指南.md  硬件采购与小白使用指南.md  端侧模型对接计划.md  联调进度与实测记录.md  设计-IDEA.md
expo-preview/: App.tsx  README.md  metro.config.js  sensorSource.ts
firmware/board_test/: board_test.ino
firmware/catune_node/: catune_node.ino
ios/: AGENTS.md  Podfile
ios/CATUNE/: Info.plist
ios/CATUNE.xcodeproj/: project.pbxproj
ios/CATUNE.xcworkspace/: contents.xcworkspacedata
ios/CatuneMnn/: .gitignore  CatuneMnn.h  CatuneMnn.mm  CatuneMnn.podspec  README.md
ios/CatuneMnn/cpp/: eyes_llm_session.cpp  eyes_llm_session.h  eyes_log.h  llm_stream_buffer.hpp  utf8_stream_processor.hpp
ios/PostureAI/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/PostureAI.xcodeproj/: project.pbxproj
ios/PostureAITests/: PostureAITests.m
plugins/: withCatuneMnn.js
prototype/: AGENTS.md  INTERACTIONS.md  dashboard.html  gamification.html  index.html
scripts/: build-mnn-ios.sh  bump-version.mjs  check-android-build-ready.mjs  check-circular-deps.mjs  check-dead-exports.mjs  check-mnn-device.ps1  check-product-design.mjs  check-theme-token-usage.mjs  compose-competition-video.py  compose-competition-video.sh  compose-lora-slides.py  compose-video-label.py  gen-frame-manifest.mjs  pack-atlas.mjs  push-mnn-commandline.ps1  tokens-migrate.mjs
scripts/sme2-demo/: Dockerfile  README.md  run-sme2-demo.sh  run-sme2-min.sh  sme2_min.c
scripts/ws-relay/: ws-sender.html
src/assess/: AGENTS.md  cloudClient.ts  config.ts  localVlClient.ts  parse.ts  preset.ts  readiness.ts  service.ts  types.ts
src/assess/__tests__/: preset.test.ts
src/constants/: appMeta.ts
src/debug/: logBus.ts
src/design/: AGENTS.md  AppShell.tsx
src/design/assets/: catAnchors.ts  leanAtlas.ts  leanFrames.ts  (+2 more)
src/mnn/: AGENTS.md  deviceProfile.ts  modelCatalog.ts  modelDownloadService.ts  modelStorage.ts  nativeDebugClient.ts
src/platform/: bleSensorSource.ts  deviceMotionReader.ts  reminder.ts  sensorSource.ts  wsSenderSource.ts  wsSensorSource.ts
src/posture/: AGENTS.md  Dashboard.tsx  actionTag.ts  adviceOrchestrator.ts  coachPrompt.ts  dailyHistory.ts  dailyReport.ts  engine.ts  exercises.ts  growth.ts  mock.ts  postureMapping.ts  reminder.ts  sensorSource.ts  types.ts  utils.ts
src/types/: nativewind.d.ts
src/ui/: AppShell.tsx
training/: .gitignore  README.md  compare.py  gen_dataset.py  merge_lora.py  train_sft.py
training/configs/: qwen0.5b_lora.yaml  qwen0.5b_merge.yaml
training/data/: dataset_info.json  seed_gold.jsonl  train.jsonl  val.jsonl
web/: AGENTS.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
(+225 files in other folders)
